Add more User's on seeds.rb

--- a/SIGS/app/views/user/edit.html.erb
+++ b/SIGS/app/views/user/edit.html.erb
@@ -23,7 +23,7 @@
 
         <div class="actions">
           <%= user.submit "Salvar", class: "pull-right btn btn-default btn-success" %>
-          <%= link_to "Excluir Conta", user_destroy_path, class: "btn btn-default btn-danger" %>
+          <%= link_to "Excluir Conta", user_destroy_path, class: "btn btn-default btn-danger", data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %>
         </div>
       </div>
       <% end %>
