--- a/SIGS/app/views/users/new.html.erb
+++ b/SIGS/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="singUp">
 
   <div class="flexContainer">
-    <figure class="logo"><%= image_tag("sigs_logo") %></figure>
+    <figure class="logo"><%= image_tag("sigs_logo.png") %></figure>
     <div>
       <h1>Novo Usuário</h1>
     </div>
@@ -82,7 +82,7 @@
   </div>
 
   <div>
-    <figure><a href="http://www.unb.br"><%= image_tag("rodape_unb") %></a></figure>
+    <figure><a href="http://www.unb.br"><%= image_tag("rodape_unb.png") %></a></figure>
   </div>
 
 </div><!-- ./singUp -->
