--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <% if current_user %>
       <div class="container container-fluid myContainer">
         <header class="navbar-default myNav">
-          <figure class="logo"><%= image_tag("sigs_logo") %></figure>
+          <figure class="logo"><%= image_tag("sigs_logo.png") %></figure>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
@@ -45,7 +45,7 @@
             <li><a href="#">Alocações</a></li>
           </ul>
 
-          <figure class="unbLogo"><a href="http://www.unb.br"><%= image_tag("rodape_unb") %></a></figure>
+          <figure class="unbLogo"><a href="http://www.unb.br"><%= image_tag("rodape_unb.png") %></a></figure>
         </header>
         <div class="alertContainer">
           <% flash.each do |key, value| %>
