--- a/SIGS/app/views/users/index.html.erb
+++ b/SIGS/app/views/users/index.html.erb
@@ -13,8 +13,8 @@
     <td><%= user.email%></td>
     <td><%= user.cpf %></td>
     <td><%= user.registration %></td>
-    <td><%= link_to image_tag("icon_edit") , user_edit_path(user.id), confirm: "Tem certeza?" %></td>
-    <td><%= link_to image_tag("icon_trash") , user_destroy_path(user.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"}%> </td>
+    <td><%= link_to image_tag("icon_edit.png") , user_edit_path(user.id), confirm: "Tem certeza?" %></td>
+    <td><%= link_to image_tag("icon_trash.png") , user_destroy_path(user.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"}%> </td>
   </tr>
 <% end %>
 </table>
