--- a/SIGS/app/views/users/new.html.erb
+++ b/SIGS/app/views/users/new.html.erb
@@ -33,15 +33,15 @@
 
         <fieldset id="type">
           <div class="radioButton">
-            <input type="radio" name="type" value="administrative_assistant" checked>
+            <input type="radio" name="type" value="administrative_assistant" id="adm_as" checked>
             <label>Assistente Administrativo</label>
           </div>
           <div class="radioButton">
-            <input type="radio" name="type" value="department_assistant">
+            <input type="radio" name="type" value="department_assistant" id="dep_as">
             <label> Auxiliar de Departamento</label>
           </div>
           <div class="radioButton">
-            <input type="radio" name="type" value="coordinator">
+            <input type="radio" name="type" value="coordinator" id="cord">
             <label>Coordenador de curso</label>
           </div>
         </fieldset>
