Implement three more scenarios in Acceptance test of Registration Request

--- a/SIGS/app/views/users/new.html.erb
+++ b/SIGS/app/views/users/new.html.erb
@@ -41,7 +41,7 @@
             <label> Auxiliar de Departamento</label>
           </div>
           <div class="radioButton">
-            <input type="radio" name="type" value="coordinator" id="cord">
+            <input type="radio" name="type" value="coordinator" id="coord">
             <label>Coordenador de curso</label>
           </div>
         </fieldset>
