correction in parsers for departments and courses in model, controller and routes

--- a/SIGS/app/views/parsers/index.html.erb
+++ b/SIGS/app/views/parsers/index.html.erb
@@ -19,7 +19,7 @@
 <br><br><br>
 
 	<h3> Parser para departamento</h3>
-	<%= form_tag upload_departament_path, multipart: true do  %>
+	<%= form_tag upload_department_path, multipart: true do  %>
 		<%= file_field_tag 'document', accept: '.csv'%>
 		<%= submit_tag 'Enviar'%>
 
