--- a/SIGS/app/views/users/index.html.erb
+++ b/SIGS/app/views/users/index.html.erb
@@ -1,20 +1,25 @@
 <h1>Usuários Registrados</h1>
-
-<table class="table">
+<%  %>
+<%=  %>
+<% if @users.count == 0 %>
+  <h3>Não há nenhum usuário registrado no momento.</h3>
+<% else %>
+  <table class="table">
     <tr>
       <th>Nome</th>
       <th>Email</th>
       <th>CPF</th>
       <th>Matricula</th>
     </tr>
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.name%></td>
-    <td><%= user.email%></td>
-    <td><%= user.cpf %></td>
-    <td><%= user.registration %></td>
-    <td><%= link_to image_tag("icon_edit.png") , user_edit_path(user.id), confirm: "Tem certeza?" %></td>
-    <td><%= link_to image_tag("icon_trash.png") , user_destroy_path(user.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"}%> </td>
-  </tr>
+    <% @users.each do |user| %>
+    <tr>
+      <td><%= user.name%></td>
+      <td><%= user.email%></td>
+      <td><%= user.cpf %></td>
+      <td><%= user.registration %></td>
+      <td><%= link_to image_tag("icon_edit.png") , user_edit_path(user.id), confirm: "Tem certeza?" %></td>
+      <td><%= link_to image_tag("icon_trash.png") , destroy_users_path(user.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"}%> </td>
+    </tr>
+    <% end %>
+  </table>
 <% end %>
-</table>
