Fixing the message for when there are no pending requests

--- a/SIGS/app/views/administrative_assistants/registration_request.html.erb
+++ b/SIGS/app/views/administrative_assistants/registration_request.html.erb
@@ -1,6 +1,6 @@
 <h1>Solicitações Pendentes</h1>
 <% if @users.count == 0 %>
-  <h3>Não há nenhuma solitação pendente no momento.</h3>
+  <h3>Não há nenhuma solicitação pendente no momento.</h3>
 <% else %>
   <table class="table">
     <tr>
