Implement view of edit and show method of Room

--- a/SIGS/app/views/rooms/edit.html.erb
+++ b/SIGS/app/views/rooms/edit.html.erb
@@ -1,22 +1,22 @@
 <h1>Editar Sala</h1>
 
 
-      <%= form_for @room,:url => {:action=> "update"} do |room| %>
+      <%= form_for @room,:url => {:action=> 'update'} do |room| %>
 
-        <%= room.label :name, "Código da Sala" %>
-        <%= room.text_field :name, class: "form-control", value: @room.code, :disabled => true %><br>
+        <%= room.label :name, 'Código da Sala' %>
+        <%= room.text_field :name, class: 'form-control', value: @room.code, :disabled => true %><br>
 
-        <%= room.label :name, "Nome" %>
-        <%= room.text_field :name, class: "form-control", value: @room.name %><br>
+        <%= room.label :name, 'Nome' %>
+        <%= room.text_field :name, class: 'form-control', value: @room.name %><br>
 
-        <%= room.label :name, "Estado" %>
-        
+        <%= room.label :name, 'Ativo' %>
+        <%= room.check_box :active, class: 'form-control',style: 'text-align:left; width: auto' %><br>
 
-        <%= room.label :name, "Prédio: " %>
-        <%= room.text_field :name, class: "form-control", value: @room.building.name, :disabled => true %><br>
+        <%= room.label :name, 'Prédio: ' %>
+        <%= room.text_field :name, class: 'form-control', value: @room.building.name, :disabled => true %><br>
 
-        <div class="actions">
-          <%= room.submit "Salvar", class: "pull-right btn btn-default btn-success" %>
+        <div class='actions'>
+          <%= room.submit 'Salvar', class: 'pull-right btn btn-default btn-success' %>
         </div>
       </div>
       <% end %>
