--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
                   </ul>
                 </li>
             <% else %>
-              <li><%= link_to "Turmas", school_rooms_new_path %></a></li>
+              <li><%= link_to "Turmas", school_rooms_index_path %></a></li>
             <% end %>
             <li><a href="#">Alocações</a></li>
           </ul>
