--- a/SIGS/app/views/categories/new.html.erb
+++ b/SIGS/app/views/categories/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Categories#new</h1>
-<p>Find me in app/views/categories/new.html.erb</p>
+<h1>Criar Categoria</h1>
+
+<%= form_for @category, url: categories_create_path do |category| %>
+
+  <div class="short_input">
+    <%= category.label :name, "Nome" %>
+    <%= category.text_field :name, class: 'form-control' %>
+  </div>
+
+  <%= category.submit "Salvar", class: 'pull-right btn btn-default btn-success' %>
+
+<% end %>
