--- a/SIGS/app/views/categories/index.html.erb
+++ b/SIGS/app/views/categories/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<h1>Categorias</h1>
+
+<%  %>
+<%= link_to "+ criar nova categoria", categories_new_path %>
+<% if @categories.count == 0 %>
+  <h3>Não há nenhuma categoria registrada no momento.</h3>
+<% else %>
+  <table class="table">
+    <tr>
+      <th>Nome</th>
+    </tr>
+    <% @categories.each do |category| %>
+    <tr>
+      <td><%= category.name%></td>
+      <td><%= link_to image_tag("icon_edit.png") %></td>
+      <td><%= link_to image_tag("icon_trash.png") %> </td>
+    </tr>
+    <% end %>
+  </table>
+<% end %>
