--- a/SIGS/app/views/school_rooms/new.html.erb
+++ b/SIGS/app/views/school_rooms/new.html.erb
@@ -16,6 +16,11 @@
     <%= school_room.collection_check_boxes(:course_ids, courses_by_user, :id, :name, include_blank: true)%>
   </div>
 
+  <p> Categorias</p>
+  <div class="checkbox-group">
+    <%= school_room.collection_check_boxes(:category_ids,all_categories,:id,:name, include_blank: true)%>
+  </div>
+
   <%= school_room.submit "Salvar", class: 'pull-right btn btn-default btn-success' %>
   <%= link_to "Cancelar", school_rooms_index_path, class: 'pull-right btn btn-default btn' %>
 
