--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -32,7 +32,17 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Minha Conta", user_edit_path(current_user) %></li>
             <li><%= link_to 'Logout', sign_out_path, method: "delete" %></li>
-            <li><%= link_to 'Salas', room_index_path %></li>
+            <% if permission[:level] == 3 %>
+              <li class="dropdown">
+                <a data-toggle="collapse" href="#salas">Salas
+                  <ul class="collapse" id="salas">
+                    <li><%= link_to 'Salas', room_index_path %></li>
+                    <li><%= link_to "Categorias", categories_index_path %></li>
+                  </ul>
+                </li>
+            <% else %>
+              <li><%= link_to 'Salas', room_index_path %></li>
+            <% end %>
             <% if permission[:level] == 3 %>
               <li class="dropdown">
                 <a data-toggle="collapse" href="#demo">Usuários
