--- a/SIGS_prototype/assets/css/navbar.css
+++ b/SIGS_prototype/assets/css/navbar.css
@@ -91,4 +91,21 @@
     display: flex;
     flex-direction: column;
   }
+
+}
+
+.none{
+    display: none !important;
+}
+
+.ativoMenu{
+  display: block;
+}
+
+.padding-left{
+  padding-left: 0px !important;
+}
+
+.padding-right{
+  padding-right: 0px;
 }
