--- a/SIGS/app/views/categories/index.html.erb
+++ b/SIGS/app/views/categories/index.html.erb
@@ -1,6 +1,29 @@
 <h1>Categorias</h1>
-
-<%= link_to "+ criar nova categoria", categories_new_path %>
+  <div class="container">
+    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Criar nova categoria</button>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Criar nova categoria</h4>
+          </div>
+          <div class="modal-body">
+            <%= form_for :category, url: categories_create_path do |category| %>
+              <div class="short_input">
+                <%= category.label :name, "Nome" %>
+                <%= category.text_field :name, class: 'form-control' %>
+              </div>
+          <div class="modal-footer">
+            <%= category.submit "Salvar", class: 'pull-right btn btn-default btn-success' %>
+          </div>
+            <% end %>
+        </div> 
+      </div>
+    </div>
+  </div>
 <% if @categories.count == 0 %>
   <h3>Não há nenhuma categoria registrada no momento.</h3>
 <% else %>
