--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -32,7 +32,14 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Minha Conta", user_edit_path(current_user) %></li>
             <li><%= link_to 'Logout', sign_out_path, method: "delete" %></li>
-            <li><%= link_to 'Salas', room_index_path %></li>
+            <li class="dropdown">
+                <a data-toggle="collapse" href="#salas">Salas
+                  <ul class="collapse" id="salas">
+                    <li><%= link_to "Meu Departamento", room_index_path %></li>
+                    <li><%= link_to "Buscar Salas" %></li>
+                  </ul>
+                </a>
+                </li>
             <% if permission[:level] == 3 %>
               <li class="dropdown">
                 <a data-toggle="collapse" href="#demo">Usuários
@@ -40,6 +47,7 @@
                     <li><%= link_to "Cadastros Pendentes", registration_request_path %></li>
                     <li><%= link_to "Usuários Registrados", user_index_path %></li>
                   </ul>
+                </a>  
                 </li>
             <% else %>
               <li><%= link_to "Turmas", school_rooms_new_path %></a></li>
