issue #26 issue #29 add some style

--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -2,7 +2,7 @@
 <% if @rooms.count == 0 %>
   <h3>Não há salas registradas no momento.</h3>
 <% else %>
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <td>Código</td>
       <td>Nome</td>
