issues #26 #29 #35 add some ajusts and some integration tests

--- a/SIGS/app/assets/stylesheets/school_rooms.scss
+++ b/SIGS/app/assets/stylesheets/school_rooms.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the school_rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.fa-check-circle {
+	color: #3ac75f;
+}
+
+.fa-times-circle {
+	color: #f23d3d;
+}
+
+.fa-trash {
+	color: #f23d3d;
+}
