--- a/SIGS/app/views/school_rooms/new.html.erb
+++ b/SIGS/app/views/school_rooms/new.html.erb
@@ -7,7 +7,7 @@
 
   <div class="short_input">
     <%= school_room.label :name, "Turma" %>
-    <%= school_room.text_field :name, class: 'form-control' %>
+    <%= school_room.text_field :name, class: 'form-control', id: 'school_room_name' %>
   </div>
 
   <p> Cursos</p>
