--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -1,27 +1,27 @@
-<h2>Suas turmas</h2>
-<%= link_to 'Criar Turma', school_rooms_new_path, class: 'btn btn-default btn-primary btn-lg' %>
-<br> <br> <br>
-<% if @school_rooms.count == 0 %>
+<%= link_to 'Criar Turma', school_rooms_new_path, class: ' pull-right btn btn-default btn-primary btn-lg' %>
+<h2>Suas Turmas</h2>
+<br> <br>
+<% if @my_school_rooms.count == 0 %>
   <h3>Não há turmas cadastradas no momento.</h3>
 <% else %>
   <table class="table table-hover">
     <tr>
-      <td>Nome</td>
-      <td>Ativo</td>
-      <td>Disciplina</td>
-      <td style="text-align:center">Alterar</td>
-      <td style="text-align:center">Visualizar</td>
-      <td style="text-align:center">Excluir</td>
+      <th>Nome</th>
+      <th>Ativo</th>
+      <th>Disciplina</th>
+      <th style="text-align:center">Alterar</th>
+      <th style="text-align:center">Visualizar</th>
+      <th style="text-align:center">Excluir</th>
     </tr>
-    <% @school_rooms.each do |school_room| %>
+    <% @my_school_rooms.each do |school_room| %>
       <tr>
         <td><%= school_room.name %></td>
-        <td><%=  ((school_room.active) ? 'Sim' : 'Não')  %></td>
+        <td><%= raw ((school_room.active) ? '<i class="fa fa-check-circle fa-lg"></i>' : '<i class="fa fa-times-circle fa-lg"></i>')  %></td>
         <td><%= school_room.discipline.name %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
-        <td style="text-align:center"><%= link_to image_tag("icon_view.png"), school_rooms_show_path(school_room.id) %></td>
+        <td style="text-align:center"><%= link_to image_tag("icon_view.png", id: 'icon_visualizar'+school_room.name), school_rooms_show_path(school_room.id) %></td>
         <td style="text-align:center">
-					<%= link_to school_rooms_destroy_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} do %>
+					<%= link_to delete_path(school_room.id), method: "delete", data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} do %>
   			    <i class="fa fa-trash fa-lg"></i>
   			  <% end %>
         </td>
