--- a/SIGS/app/views/school_rooms/show.html.erb
+++ b/SIGS/app/views/school_rooms/show.html.erb
@@ -4,5 +4,4 @@
 
 <%= link_to 'Editar', school_rooms_edit_path(@school_room.id), class: 'btn btn-primary' %>
 
-<%= link_to "Excluir Turma", school_rooms_destroy_path, class: "btn btn-default btn-danger", data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %>
-
+<%= link_to "Excluir Turma", delete_path(@school_room.id), method: "delete", data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"}, class: "btn btn-default btn-danger" %>
