--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -51,9 +51,15 @@
                     <li><%= link_to "Usuários Registrados", user_index_path %></li>
                   </ul>
               </li>
-              <li><%= link_to "Período", period_index_path %> </li>  
+              <li><%= link_to "Período", period_index_path %> </li>
             <% else %>
-              <li><%= link_to "Turmas", school_rooms_index_path %></a></li>
+              <li class="dropdown">
+                <a data-toggle="collapse" href="#demo">Turmas
+                  <ul class="collapse" id="demo">
+                    <li><%= link_to "Nova Turma", school_rooms_new_path %></li>
+                    <li><%= link_to "Meu Departamento", school_rooms_index_path %></li>
+                  </ul>
+              </li>
             <% end %>
             <li><a href="#">Alocações</a></li>
           </ul>
