--- a/SIGS_prototype/assets/css/style.css
+++ b/SIGS_prototype/assets/css/style.css
@@ -98,3 +98,24 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.number{
+  width: 90px;
+}
+
+.button_align{
+  margin-top: 20px;
+}
+
+.form_filter_room label{
+  padding-left: 25px;
+}
+
+.left_zero{
+  padding-left: 0px !important;
+}
+
+.checkbox_space input{
+  padding-left: 30px !important;
+  margin-left: 20px;
+}
