--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -1,8 +1,41 @@
 <h1>Salas</h1>
+
 <% if @rooms.count == 0 %>
   <h3>Não há salas registradas no momento.</h3>
 <% else %>
   <table class="table table-hover">
+
+  <%= form_for :index, url: room_index_post_path,  :html => {:role => 'form'} do |f| %>
+    <%= f.label :name, "Nome " %>
+    <%= f.text_field :name, class: 'form-control' %>
+
+    <%= f.label :ala, "Alas" %>
+    <%= f.select :ala, ["", "Norte", "Sul", "Central"] %>
+
+    <%= f.label :building, "Prédio" %>
+    <%= f.fields_for :building do |ff| %>
+      <%= ff.collection_select(:building_id,Building.all,:id,:name,include_blank: true) %>
+    <% end %>
+
+    <%= f.label :vagas, "Vagas " %>
+    <%= f.number_field :vagas, class: 'form-control', min: 5, max: 500 %>
+
+    <%= f.label :category, "Categorias" %>
+    <br>
+    <%= f.fields_for :all_categories do |fff| %>
+      <%= fff.collection_check_boxes(:category_id,Category.all,:id,:name,include_blank: true) %>
+    <% end %>
+
+    <br><br>
+    <%= f.label :activity, "Atividade" %>
+    <br>
+    <%= f.check_box :active %> Ativo
+    <%= f.check_box :active %> Inativo
+
+    <%= f.submit "Enviar", class: 'pull-right btn btn-default btn-success' %>
+  <%end%>
+
+  <table class="table">
     <tr>
       <td>Código</td>
       <td>Nome</td>
@@ -23,23 +56,6 @@
         <td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_room_path(room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
       </tr>
     <% end %>
+  </table>
+
 <% end %>
-</table>
-<!-- <div class="modal fade modalDelete" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Excluir Sala</h4>
-      </div>
-      <div class="modal-body">
-        <p>Tem certeza que deseja excluir essa sala?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success btnDelete" data-dismiss="modal">Confirmar</button>
-      </div>
-    </div>
-  </div>
-</div>
- -->
