--- a/SIGS/app/views/school_rooms/edit.html.erb
+++ b/SIGS/app/views/school_rooms/edit.html.erb
@@ -2,22 +2,25 @@
 <%= form_for(@school_room, url: {action: "update"}) do |school_room| %>
 
   <label>Disciplina </label>
-  <%= school_room.select :discipline_id, Discipline.all.collect {|d| [d.name, d.id]} %>
+  <%= school_room.select :discipline_id, get_disciplines(current_user).collect {|d| [d.name, d.id] }%>
 
   <div class="short_input">
     <%= school_room.label :name, "Turma" %>
-    <%= school_room.text_field :name, class: 'form-control' %>
+    <%= school_room.text_field :name, class: 'form-control', id: 'school_room_name', :disabled => true  %>
   </div>
-
-  <%= school_room.hidden_field :id, value: @school_room.id %>
 
   <p> Cursos</p>
   <div class="checkbox-group">
 
-    <%= school_room.collection_check_boxes(:course_ids, courses_by_user, :id, :name, include_blank: true)%>
+    <%= school_room.collection_check_boxes(:course_ids, @all_courses, :id, :name, include_blank: true)%>
   </div>
+  <br>
+  <p> Categorias</p>
+  <div class="checkbox-group">
+    <%= school_room.collection_check_boxes(:category_ids,all_categories,:id,:name, include_blank: true)%>
+  </div>
+  <br>
 
   <%= school_room.submit "Alterar", class: 'pull-right btn btn-default btn-success' %>
-  <%= link_to "Voltar", school_rooms_show_path(@school_room.id), class: "pull-right btn btn-default"%> <br>
 
 <% end %>
