--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -4,8 +4,15 @@
   <h3>Não há salas registradas no momento.</h3>
 <% else %>
   <table class="table table-hover">
+<%= form_tag(room_index_post_path, :method => :post) do %>
+  <%= text_field_tag 'name', nil, placeholder: 'Digite o nome da sala...', size: '50', class: 'form-control' %>
+  <%= text_field_tag 'code', nil, placeholder: 'Digite o código da sala...', size: '50', class: 'form-control' %>
+  <%= number_field_tag 'capacity', nil, placeholder: 'Digite a quantidade de vagas...', size: '300', class: 'form-control' %>
+  <%= submit_tag "Submit"%>
+<% end %>
 
-  <%= form_for :index, url: room_index_post_path,  :html => {:role => 'form'} do |f| %>
+<!--
+  <%= form_for :index, url: room_index_path,  :html => {:role => 'form'} do |f| %>
     <%= f.label :name, "Nome " %>
     <%= f.text_field :name, class: 'form-control' %>
 
@@ -32,8 +39,8 @@
     <%= f.check_box :active %> Ativo
     <%= f.check_box :active %> Inativo
 
-    <%= f.submit "Enviar", class: 'pull-right btn btn-default btn-success' %>
-  <%end%>
+    <%= f.submit "Enviar", class: 'pull-right btn btn-default btn-success' %> -->
+  <!-- <%end%> -->
 
   <table class="table">
     <tr>
@@ -57,5 +64,3 @@
       </tr>
     <% end %>
   </table>
-
-<% end %>
