--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Allocations#new</h1>
-<p>Find me in app/views/allocations/new.html.erb</p>
+<%= form_for @allocation, url: allocations_create_path do |allocation| %>
+  <%= link_to "+ Criar uma nova turma" , school_rooms_new_path %><br>
+
+  <label> Salas </label>
+  <%= allocation.collection_select(:room_id,@coordinator_rooms,:id,:name, include_blank: true)%>
+
+  <label> Turmas </label>
+  <%= allocation.collection_select(:school_room_id,@school_rooms_coordinator,:id,:name, include_blank: true) %>
+
+  <%= allocation.submit "Salvar", class: 'pull-right btn btn-default btn-success' %>
+
+<% end %>
