--- a/SIGS_prototype/assets/css/form.css
+++ b/SIGS_prototype/assets/css/form.css
@@ -9,6 +9,11 @@
   margin-bottom:20px;
 }
 
+.myContainer input[type="number"]{
+  width: 100px;
+}
+
+
 .myContainer input[type="submit"] {
   width: auto;
   float: right;
