issue #37: Add capacity attribute in school room

--- a/SIGS/app/assets/stylesheets/form.scss
+++ b/SIGS/app/assets/stylesheets/form.scss
@@ -9,6 +9,10 @@
   margin-bottom:20px;
 }
 
+.myContainer input[type="number"]{
+  width: 100px;
+}
+
 .myContainer input[type="submit"] {
   width: auto;
   float: right;
