--- a/SIGS/app/views/school_rooms/new.html.erb
+++ b/SIGS/app/views/school_rooms/new.html.erb
@@ -8,15 +8,16 @@
   <div class="short_input">
     <%= school_room.label :name, "Turma" %>
     <%= school_room.text_field :name, class: 'form-control' %>
+    <%= school_room.label :capacity, "Capacidade" %>
+    <%= school_room.number_field :capacity, class: 'form-control' %>
   </div>
-
-  <p> Cursos</p>
+  <br>
+  <%= school_room.label :course_ids, "Cursos" %>
   <div class="checkbox-group">
-
     <%= school_room.collection_check_boxes(:course_ids, @all_courses, :id, :name, include_blank: true)%>
   </div>
   <br>
-  <p> Categorias</p>
+  <%= school_room.label :category_ids, "Categorias" %>
   <div class="checkbox-group">
     <%= school_room.collection_check_boxes(:category_ids,all_categories,:id,:name, include_blank: true)%>
   </div>
