issue #35 add method to show courses at school room index

--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -1,6 +1,8 @@
 <%= link_to 'Criar Turma', school_rooms_new_path, class: ' pull-right btn btn-default btn-primary btn-lg' %>
 <h2>Suas Turmas</h2>
+
 <br> <br>
+
 <% if @my_school_rooms.count == 0 %>
   <h3>Não há turmas cadastradas no momento.</h3>
 <% else %>
@@ -9,6 +11,7 @@
       <th>Nome</th>
       <th>Ativo</th>
       <th>Disciplina</th>
+      <th>Cursos</th>
       <th style="text-align:center">Alterar</th>
       <th style="text-align:center">Visualizar</th>
       <th style="text-align:center">Excluir</th>
@@ -18,6 +21,11 @@
         <td><%= school_room.name %></td>
         <td><%= raw ((school_room.active) ? '<i class="fa fa-check-circle fa-lg"></i>' : '<i class="fa fa-times-circle fa-lg"></i>')  %></td>
         <td><%= school_room.discipline.name %></td>
+        <td>
+          <% courses_of_school_room(school_room.id).each do |course| %>
+            <%= course %>
+          <% end %>
+        </td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_view.png", id: 'icon_visualizar'+school_room.name), school_rooms_show_path(school_room.id) %></td>
         <td style="text-align:center">
