--- a/SIGS/app/views/school_rooms/edit.html.erb
+++ b/SIGS/app/views/school_rooms/edit.html.erb
@@ -7,6 +7,8 @@
   <div class="short_input">
     <%= school_room.label :name, "Turma" %>
     <%= school_room.text_field :name, class: 'form-control', id: 'school_room_name', :disabled => true  %>
+    <%= school_room.label :capacity, "Capacidade" %>
+    <%= school_room.number_field :capacity, class: 'form-control' %>
   </div>
 
   <p> Cursos</p>
