--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -20,10 +20,8 @@
         <td><%= school_room.discipline.name %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_view.png", id: 'icon_visualizar'+school_room.name), school_rooms_show_path(school_room.id) %></td>
-        <td style="text-align:center">
-					<%= link_to delete_path(school_room.id), method: "delete", data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} do %>
-  			    <i class="fa fa-trash fa-lg"></i>
-  			  <% end %>
+
+        <td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
         </td>
       </tr>
     <% end %>
