--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -1,11 +1,25 @@
-<%= form_for @allocation, url: allocations_create_path do |allocation| %>
-  <%= link_to "+ Criar uma nova turma" , school_rooms_new_path %><br>
+<h1>Alocação</h1>
 
-  <label> Salas </label>
+<%= form_for @allocation, url: allocations_create_path do |allocation| %>
+
+  <label> Sala </label>
   <%= allocation.collection_select(:room_id,@coordinator_rooms,:id,:name, include_blank: true)%>
 
-  <label> Turmas </label>
+  <label> Turma </label> <%= link_to "+ Criar uma nova turma" , school_rooms_new_path %><br>
   <%= allocation.collection_select(:school_room_id,@school_rooms_coordinator,:id,:name, include_blank: true) %>
+
+  <% days = ["Segunda","Terça","Quarta","Quinta","Sexta","Sabado"] %>
+  <%= allocation.label :day, "Escolha um dia:" %><br>
+  <% days.each do |day| %>
+    <%= day %>
+    <%= allocation.radio_button :day,day %> |
+  <% end %>
+  <br><br>
+  <label> Hora de inicio: </label><br>
+  <%= allocation.time_field(:start_time) %>
+  <br>
+  <label> Hora de términio: </label><br>
+  <%= allocation.time_field(:final_time) %>
 
   <%= allocation.submit "Salvar", class: 'pull-right btn btn-default btn-success' %>
 
