--- a/SIGS/app/views/school_rooms/new.html.erb
+++ b/SIGS/app/views/school_rooms/new.html.erb
@@ -10,12 +10,19 @@
     <%= school_room.text_field :name, class: 'form-control' %>
   </div>
 
-  <p> Cursos</p>
+  <p>Vagas</p>
+  <div class="checkbox-group">
+    <%= school_room.number_field :vacancies %>
+  </div>
+  <br>
+
+  <p>Cursos</p>
   <div class="checkbox-group">
     <%= school_room.collection_check_boxes(:course_ids, courses_by_user, :id,:name, include_blank: true) %>
   </div>
   <br>
-  <p> Categorias</p>
+
+  <p>Categorias</p>
   <div class="checkbox-group">
     <%= school_room.collection_check_boxes(:category_ids,all_categories,:id,:name, include_blank: true)%>
   </div>
